src/objects/ContactMailingList__c.object
<CustomObject>
    <description>SFDC1-298 Association object between Contact and Mailing lists</description>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>SFDC1-298 to display contact name in mailing list object related list</description>
        <formula>Contact__r.FirstName +&apos; &apos;+ Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>SFDC1-298 Contact field to associate to mailing list subscription</description>
        <inlineHelpText>Select the contact to subscribe a mailing list</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mailing Lists</relationshipLabel>
        <relationshipName>ContactSubscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MailingListStatus__c</fullName>
        <description>SFDC1-298 to determine the subscription status of mailing list</description>
        <inlineHelpText>Select active to subscribe to mailing list</inlineHelpText>
        <label>Mailing List Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailingList__c</fullName>
        <description>SFDC1-298 Relationship to associate mailing list wit contact</description>
        <inlineHelpText>Select a mailing list to associate</inlineHelpText>
        <label>Mailing List</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MailingList__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MailingList__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PKIDContactMailingList__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>CML{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID ContactMailingList</label>
        <type>AutoNumber</type>
    </fields>
    <label>Contact Mailing List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CML-{000000}</displayFormat>
        <label>Contact Mailing List number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Mailing Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>